HEAD
	+ Added missing EBox::Exceptions uses
	+ Read DNS zones from samba database while provisioning
3.2.4
	+ Fix set of dynamic attribute in domain table when samba module is enabled
	  again
	+ Do not write reverse zone files if generate_reverse_zones is false
	+ Do not set localhost as primary resolver if users module is configured
	  in external AD mode. In this case, the AD DNS server must be used.
3.2.3
	+ Added network as enabledepend, needed by the resolvconf management
3.2.2
	+ Enable resolvconf updates when starting and stopping bind9 daemon
3.2.1
	+ Enforce include of 127.0.0.1 in DNS resolvers when enabling
3.2
	+ Set version to 3.2
3.1.5
	+ Override daemons when migrating from 3.0
3.1.4
	+ Use the new samba module state flag isProvisioning to set the samba
	  flag on DomainTable rows
	+ Do not try to update the zone while samba is provisioning the domain
3.1.3
	+ Adapted to new CSS styles
	+ Remove the setting desktop service in _preSetConf and initial-setup
3.1.2
	+ Added sortlist support.
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Adapt firewall rules to new accept chains
	+ Set transparent DNS cache firewall rules unless the module is
	  temporary stopped
	+ Set transparent DNS cache firewall rules in Firewall Helper
3.1
	+ Removed 3.0.X migration code
	+ Implemented _daemonsToDisable()
	+ Depend on zentyal-core 3.1
3.0.9
	+ Fixed bind9 dependency to allow to install it with higher versions
	+ Do not try to add duplicated interface addresses
3.0.8
	+ Fix intnets config key parsing and validation
	+ Fixed apparmor errors trying to access /dev/urandom
3.0.7
	+ Guard against interfaces with unset address
	+ Dynamic domains are now properly detected on _reverseData()
	+ Rename domain if exists when changing it in System -> General
	+ Remove depends on users and samba to avoid deep recursion
	+ Use API to retrieve foreign model value
3.0.6
	+ Improve management of DNS zones stored in samba LDAP